tests/passing/unit_parameter_multiple.tails
func foo(x: unit, y: unit) -> unit:
  x

func tests() -> unit:
  discard foo(pass, pass)
