tests/failing/resolution_missing_function.tails
func tests() -> unit:
  foo()

  pass
